--- a/index.html
+++ b/index.html
@@ -1,21 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Training Load Dashboard</title>
-  <link rel="stylesheet" href="style.css"/>
-  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <title>Training Dashboard</title>
+    <link rel="stylesheet" href="style.css" />
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
 <body>
-<div class="container">
-  <h1>Training Load & Injury Risk Dashboard</h1>
+<h1>Training Metrics Dashboard</h1>
 
-  <div class="input-section">
-    <input type="text" id="tokenInput" placeholder="Enter Athlete Token" />
-    <input type="date" id="startDate" />
-    <input type="date" id="endDate" />
-    <button onclick="fetchTrainingData()">Get Training Data</button>
-  </div>
+<div class="checkboxes" id="metricToggles"></div>
 
-  <div
+<div id="graphsContainer"></div>
+
+<script src="script.js"></script>
+</body>
+</html>
